Making changes to move API endpoint into app. Also changing colour scheme to be more neutral

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,11 +18,11 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item menu-close href="#/app/configuration">
+          Settings
         </ion-item>
         <ion-item menu-close href="#/app/order">
-          Order
+          Orders
         </ion-item>
       </ion-list>
     </ion-content>
