--- a/www/templates/orderDetails.html
+++ b/www/templates/orderDetails.html
@@ -45,10 +45,10 @@
           </div>
 
 
-          <div class="cd-timeline-content padding calm">
+          <div class="cd-timeline-content padding dark">
             <h5 class="marginBottom0 marginTop0">{{event.type}}</h5>
             <p class="marginTop5 cd-author">{{event.time | date: "d MMM yy hh:mm"}}</p>
-            <p class="cd-author">Reference Number: {{event.eventId}}</p>
+            <p  style="font-size: 70%; color: grey; padding-top:1px">Event Reference: {{event.eventId}}</p>
           </div>
 
           </div>
