--- a/www/css/timeline.css
+++ b/www/css/timeline.css
@@ -59,8 +59,8 @@ Main components
   top: 0;
   left: 18px;
   height: 100%;
-  width: 4px;
-  background: gray;
+  width: 2px;
+  background: black;
 }
 
 .cd-timeline-block {
@@ -122,8 +122,8 @@ Main components
   border-radius: 0.25em;
   border-color: #BDDFB3;
   border-style: solid;
-  border-width: 2px;
-  margin-bottom: 10px;
+  border-width: 0.5px;
+  margin-bottom: 5px;
 }
 .cd-timeline-content:after {
   content: "";
@@ -202,10 +202,10 @@ Main components
 }
 /*DARK*/
 .dark {
-  border-color: #444;
+  border-color: #D3D3D3;
 }
 .dark i {
-  color: #444;
+  color: #D3D3D3;
 }
 
 @media only screen and (min-width: 768px) {
